# rust_lib_for_comp

./: .gitignore  Cargo.toml  LICENSE  Makefile  Makefile.toml  README.md  docker-compose.yml  gh-pages.yml  git-restore-mtime.py  katex.html
crates/aoj/: Cargo.toml  area.rs  convex_hull.rs  distance.rs  incircle_of_a_triangle.rs  maximum_flow.rs  tangent_to_a_circle.rs
crates/convolution/bitwise_convolution/: Cargo.toml  and_convolution.rs  lib.rs  or_convolution.rs  xor_convolution.rs
crates/data_structure/binary_indexed_tree/: Cargo.toml  lib.rs
crates/data_structure/dynamic_li_chao_tree/: Cargo.toml  lib.rs  line_add_get_min.rs  segment_add_get_min.rs
crates/data_structure/implicit_treap/: Cargo.toml  lib.rs
crates/data_structure/lazy_segment_tree/: Cargo.toml  lib.rs  rmq.rs
crates/data_structure/segment_tree/: Cargo.toml  lib.rs  rmq.rs
crates/data_structure/sparse_table/: Cargo.toml  lib.rs  rmq.rs
crates/data_structure/succinct_indexable_dictionaries/: Cargo.toml  lib.rs
crates/data_structure/wavelet_matrix/: Cargo.toml  lib.rs  rks.rs  srf.rs
crates/flow/dinic/: Cargo.toml  lib.rs
crates/geometry/circle/: Cargo.toml  circumscribed_circle_of_a_triangle.rs  cross_points_of_a_circle_and_a_line.rs  cross_points_of_circles.rs  incircle_of_a_triangle.rs  intersection_of_circles.rs  lib.rs
crates/geometry/closest_pair/: Cargo.toml  closest_pair.rs  lib.rs
crates/geometry/convex_hull/: Cargo.toml  lib.rs
crates/geometry/plane_float/: Cargo.toml  lib.rs
crates/graph/directed_acyclic_graph/: Cargo.toml  lib.rs
crates/graph/strongly_connected_components/: Cargo.toml  lib.rs
crates/graph/undirected_unweighted_simple_graph/: Cargo.toml  lib.rs
crates/verifications/aoj/: Cargo.toml  all_pairs_shortest_path.rs  cgl.rs  dsl.rs  grl.rs  itp1.rs  lib.rs  regular.rs
crates/verifications/atcoder/: Cargo.toml  arc.rs  lib.rs
crates/verifications/library_checker/: Cargo.toml  aplusb.rs  associative_array_treap.rs  convolution.rs  data_structure.rs  graph.rs  lib.rs  math.rs  matrix.rs  new.rs  sample.rs  string.rs  strongly_connected_components.rs  suffix_array.rs  sum_of_floor_of_linear.rs  tree.rs  tree_diameter.rs  union_find.rs  vertex_add_path_sum.rs  vertex_add_subtree_sum.rs  vertex_set_path_composite.rs  z_algorithm.rs
solvers/aoj/: Cargo.toml  aoj_0275.rs  aoj_1308.rs  aoj_2659.rs  cgl_1_a.rs  cgl_1_b.rs  cgl_1_c.rs  cgl_2_a.rs  cgl_2_b.rs  cgl_2_c.rs  cgl_2_d.rs  cgl_3_a.rs  cgl_3_b.rs  cgl_3_c.rs  cgl_4_a.rs  cgl_4_b.rs  cgl_4_c.rs  cgl_5_a.rs  cgl_7_a.rs  cgl_7_b.rs  cgl_7_c.rs  cgl_7_d.rs  cgl_7_e.rs  cgl_7_f.rs  dsl_5_b.rs  grl_1_a.rs  grl_6_a.rs  grl_6_b.rs  itp1_7_d.rs  lib.rs
solvers/library_checker/: Cargo.toml  factorize.rs  lib.rs  line_add_get_min.rs  range_kth_smallest.rs  rmq_disjoint_sparse_table.rs  rmq_lazy_segment_tree.rs  rmq_segment_tree.rs  rmq_sparse_table.rs  segment_add_get_min.rs  shortest_path.rs  static_range_frequency.rs  static_range_frequency_wavelet_matrix.rs  strongly_connected_components.rs  sum_of_floor_of_linear.rs  vertex_add_path_sum.rs  vertex_add_path_sum2.rs
verifications/aoj/: Cargo.toml  all_pairs_shortest_path.rs  aoj_0275.rs  area.rs  awkward_lights.rs  chopsticks.rs  circumscribed_circle_of_a_triangle.rs  closest_pair.rs  convex_cut.rs  convex_hull.rs  counter_clockwise.rs  cross_point.rs  cross_points_of_a_circle_and_a_line.rs  cross_points_of_circles.rs  dag_reachability.rs  diameter_of_a_convex_polygon.rs  distance.rs  grl_1_c.md  incircle_of_a_triangle.rs  intersection.rs  intersection_of_circles.rs  is_convex.rs  lib.rs  matrix_multiplication.rs  maximum_flow.rs  minimum_cost_flow.rs  parallel_orthogonal.rs  polygon_point_containment.rs  projection.rs  reflection.rs  single_source_shortest_path.rs  tangent_to_a_circle.rs  the_maximum_number_of_overlaps.rs
verifications/aoj/all_pairs_shortest_path/: Cargo.toml  main.rs
verifications/aoj/area/: Cargo.toml
verifications/aoj/awkward_lights/: Cargo.toml  main.rs
verifications/aoj/chopsticks/: Cargo.toml  main.rs
verifications/aoj/circumscribed_circle_of_a_triangle/: Cargo.toml  main.rs
verifications/aoj/closest_pair/: Cargo.toml  main.rs
verifications/aoj/convex_cut/: Cargo.toml  main.rs
verifications/aoj/convex_hull/: Cargo.toml  main.rs
verifications/aoj/counter_clockwise/: Cargo.toml  main.rs
verifications/aoj/cross_point/: Cargo.toml
verifications/aoj/cross_points_of_a_circle_and_a_line/: Cargo.toml
verifications/aoj/cross_points_of_circles/: Cargo.toml  main.rs
verifications/aoj/dag_reachability/: Cargo.toml  main.rs
verifications/aoj/diameter_of_a_convex_polygons/: Cargo.toml
verifications/aoj/distance/: Cargo.toml  main.rs
verifications/aoj/hard_beans/: Cargo.toml
verifications/aoj/incircle_of_a_triangle/: Cargo.toml
verifications/aoj/intersection/: Cargo.toml  main.rs
verifications/aoj/intersection_of_circles/: Cargo.toml
verifications/aoj/is_convex/: Cargo.toml  main.rs
verifications/aoj/matrix_multiplication/: Cargo.toml  main.rs
verifications/aoj/maximum_flow/: Cargo.toml  main.rs
verifications/aoj/minimum_cost_flow/: Cargo.toml  main.rs
verifications/aoj/minimum_spanning_tree/: Cargo.toml  main.rs
verifications/aoj/parallel_orthogonal/: Cargo.toml  main.rs
verifications/aoj/polygon_point_containment/: Cargo.toml  main.rs
verifications/aoj/projection/: Cargo.toml  main.rs
verifications/aoj/reflection/: Cargo.toml
verifications/aoj/single_source_shortest_path/: Cargo.toml  main.rs
verifications/aoj/single_source_shortest_path_negative_edges/: main.rs
verifications/aoj/tangent_to_a_circle/: Cargo.toml  main.rs
verifications/library_checker/: Cargo.toml  factorize.rs  line_add_get_min.rs  range_kth_smallest.rs  rmq_distjoint_sparse_table.rs  rmq_lazy_segment_tree.rs  rmq_segment_tree.rs  rmq_sparse_table.rs  segment_add_get_min.rs  shortest_path.rs  static_range_frequency.rs  static_range_frequency_wavelet_matrix.rs  strongly_connected_components.rs  sum_of_floor_of_linear.rs  vertex_add_path_sum.rs  vertex_add_path_sum2.rs
verifications/library_checker/aplusb/: main.rs
(+1980 files in other folders)
