[workspace]
members = [
    'crates/rust_lib_for_comp',
    'crates/verifications/aoj',
    # 'verifications/atcoder/*',
    # 'verifications/library_checker/*',
    # 'verifications/yukicoder/*',
    'crates/benches/*',
    'crates/tools/verify',
    'crates/tools/verify_attr',
]
resolver = "2"

[profile.release]
lto = true
panic = 'abort'
overflow-checks = true

[profile.test]
opt-level = 3
