[workspace]
members = [
    'crates/rust_lib_for_comp',
    'crates/verifications/aoj',
    # 'verifications/atcoder/*',
    'crates/verifications/library_checker',
    'crates/verifications/yukicoder',
    'crates/benches/*',
]
resolver = "2"

[profile.release]
lto = true
panic = 'abort'
overflow-checks = true

[profile.test]
opt-level = 3
