[workspace]
members = [
    'crates/rust_lib_for_comp',
    'crates/verifications/aoj',
    'crates/verifications/atcoder',
    'crates/verifications/library_checker',
    'crates/verifications/yukicoder',
    'crates/benches/*',
]
resolver = "2"

[profile.release]
lto = true
debug = true
panic = 'abort'
overflow-checks = true
incremental = true
