[package]
name = "aoj_solver"
version = "0.1.0"
edition = "2018"

[dependencies]
prelude = { path = "../../crates/prelude" }
plane_float = { path = "../../crates/geometry/plane_float" }
float_value = { path = "../../crates/element/float_value" }
circle = { path = "../../crates/geometry/circle" }
convex_hull = { path = "../../crates/geometry/convex_hull" }
io_util = { path = "../../crates/util/io_util" }
string_util = { path = "../../crates/util/string_util" }
min_max_macro = { path = "../../crates/util/min_max_macro" }
dinic = { path = "../../crates/flow/dinic" }
binary_indexed_tree_2d = { path = "../../crates/data_structure/binary_indexed_tree_2d" }
addition = { path = "../../crates/algebra/binary_operation/addition" }
adjacency_list = { path = "../../crates/graph/adjacency_list" }
io_debug = { path = "../../crates/util/io_debug" }
dijkstra = { path = "../../crates/graph/dijkstra" }
directed_acyclic_graph = { path = "../../crates/graph/directed_acyclic_graph" }

[lib]
path = "lib.rs"
