[package]
name = "bitwise_convolution"
version = "0.1.0"
edition = "2018"

[dependencies]
algebra = { path = "../../algebra" }
mod_int = { path = "../../algebra/mod_int" }
prelude = { path = "../../prelude" }

[dev-dependencies]
xor_shift = { path = "../../algo/xor_shift" }
mod_int = { path = "../../algebra/mod_int" }

[lib]
path = "lib.rs"