[package]
name = "binary_indexed_tree"
version = "0.1.0"
edition = "2018"

[dependencies]
prelude = { path = "../../prelude" }
algebra = { path = "../../algebra" }
range_traits = { path = "../../range_traits" }
string_util = { path = "../../util/string_util" }

[dev-dependencies]
addition = { path = "../../algebra/binary_operation/addition" }
rand = "0.6"

[lib]
path = "lib.rs"
