[package]
name = "dynamic_li_chao_tree"
version = "0.1.0"
edition = "2018"

[dependencies]
prelude = { path = "../../prelude" }
min_max_macro = { path = "../../util/min_max_macro" }
range_traits = { path = "../../range_traits" }

[dev-dependencies]
xor_shift = { path = "../../algo/xor_shift" }
string_util = { path = "../../util/string_util" }
io_util = { path = "../../util/io_util" }
io_debug = { path = "../../util/io_debug" }
[lib]
path = "lib.rs"
