[package]
name = "implicit_treap"
version = "0.1.0"
edition = "2018"

[dependencies]
prelude = { path = "../../prelude" }
xor_shift = { path = "../../algo/xor_shift" }
range_traits = { path = "../../range_traits" }

[dev-dependencies]
addition = { path = "../../algebra/binary_operation/addition" }
rand = "0.6"

[lib]
path = "lib.rs"
