[package]
name = "segment_tree"
version = "0.1.0"
edition = "2018"

[dependencies]
prelude = { path = "../../prelude" }
algebra = { path = "../../algebra" }
range_traits = { path = "../../range_traits" }

minimization = { path = "../../algebra/binary_operation/minimization" }
io_util = { path = "../../util/io_util" }
string_util = { path = "../../util/string_util" }

[dev-dependencies]
maximization = { path = "../../algebra/binary_operation/maximization" }
addition = { path = "../../algebra/binary_operation/addition" }
sequence = { path = "../../element/sequence" }

[lib]
path = "lib.rs"

[[example]]
name = "rmq-segment-tree"
path = "rmq.rs"