[package]
name = "sparse_table"
version = "0.1.0"
edition = "2018"

[dependencies]
prelude = { path = "../../prelude" }
algebra = { path = "../../algebra" }
range_traits = { path = "../../range_traits" }
string_util = { path = "../../util/string_util" }

minimization = { path = "../../algebra/binary_operation/minimization" }
io_util = { path = "../../util/io_util" }

[dev-dependencies]
addition = { path = "../../algebra/binary_operation/addition" }

[lib]
path = "lib.rs"

[[example]]
name = "rmq-sparse-table"
path = "rmq.rs"
