[package]
name = "circle"
version = "0.1.0"
edition = "2018"

[dependencies]
prelude = { path = "../../prelude" }
min_max_macro = { path = "../../util/min_max_macro" }
plane_float = { path = "../plane_float" }
float_value = { path = "../../element/float_value" }

[dev-dependencies]
io_util = { path = "../../util/io_util" }
string_util = { path = "../../util/string_util" }

[lib]
path = "lib.rs"

[[example]]
name = "intersection-of-circles"
path = "./intersection_of_circles.rs"

[[example]]
name = "incircle-of-a-triangle"
path = "./incircle_of_a_triangle.rs"

[[example]]
name = "circumscribed-circle-of-a-triangle"
path = "./circumscribed_circle_of_a_triangle.rs"

[[example]]
name = "cross-points-of-a-circle-and-a-line"
path = "cross_points_of_a_circle_and_a_line.rs"

[[example]]
name = "cross-points-of-circles"
path = "cross_points_of_circles.rs"

[[example]]
name = "tangent-to-a-circle"
path = "tangent_to_a_circle.rs"
