[package]
name = "plane_float"
version = "0.1.0"
edition = "2018"

[dependencies]
prelude = { path = "../../prelude" }

[dev-dependencies]
io_util = { path = "../../util/io_util" }
string_util = { path = "../../util/string_util" }

[lib]
path = "lib.rs"

[[example]]
name = "projection"
path = "./aoj/projection.rs"

[[example]]
name = "reflection"
path = "./aoj/reflection.rs"

[[example]]
name = "counter-clockwise"
path = "./aoj/counter_clockwise.rs"

[[example]]
name = "parallel-orthogonal"
path = "./aoj/parallel_orthogonal.rs"
