[package]
name = "plane_float"
version = "0.1.0"
edition = "2018"

[dependencies]
prelude = { path = "../../prelude" }
min_max_macro = { path = "../../util/min_max_macro" }

[dev-dependencies]
io_util = { path = "../../util/io_util" }
string_util = { path = "../../util/string_util" }

[lib]
path = "lib.rs"

[[example]]
name = "projection"
path = "./aoj/projection.rs"

[[example]]
name = "reflection"
path = "./aoj/reflection.rs"

[[example]]
name = "counter-clockwise"
path = "./aoj/counter_clockwise.rs"

[[example]]
name = "parallel-orthogonal"
path = "./aoj/parallel_orthogonal.rs"

[[example]]
name = "intersection"
path = "./aoj/intersection.rs"

[[example]]
name = "cross-point"
path = "./aoj/cross_point.rs"

[[example]]
name = "distance"
path = "./aoj/distance.rs"

[[example]]
name = "area"
path = "./aoj/area.rs"

[[example]]
name = "is-convex"
path = "./aoj/is_convex.rs"

[[example]]
name = "polygon-point-containment"
path = "./aoj/polygon_point_containment.rs"

[[example]]
name = "convex-hull"
path = "./aoj/convex_hull.rs"

[[example]]
name = "diameter-of-a-convex-polygon"
path = "./aoj/diameter_of_a_convex_polygon.rs"

[[example]]
name = "convex-cut"
path = "./aoj/convex_cut.rs"
