[package]
name = "strongly_connected_components"
version = "0.1.0"
edition = "2018"

[dependencies]
prelude = { path = "../../prelude" }
graph = { path = "../../graph" }
adjacency_list = { path = "../../graph/adjacency_list" }
algebra = { path = "../../algebra" }
fxhasher = { path = "../../algo/fxhasher" }

[lib]
path = "lib.rs"
