[package]
name = "aoj_solver_area"
version = "0.1.0"
edition = "2018"

[dependencies]
io_util = { path = "../../../crates/util/io_util" }
io_debug = { path = "../../../crates/util/io_debug" }
string_util = { path = "../../../crates/util/string_util" }
convex_hull = { path = "../../../crates/geometry/convex_hull" }

[[example]]
name = "area"
path = "main.rs"
