[package]
name = "aoj_solver_chopsticks"
version = "0.1.0"
edition = "2018"

[dependencies]
io_util = { path = "../../../crates/util/io_util" }
io_debug = { path = "../../../crates/util/io_debug" }
string_util = { path = "../../../crates/util/string_util" }

chinese_remainder_theorem = { path = "../../../crates/algebra/chinese_remainder_theorem" }

[[bin]]
name = "aoj_solver_chopsticks"
path = "main.rs"
